src/styles/style.scss
@import 'typography/typography-tokens';
@import 'colors/color-use-tokens';
@import 'spacing/spacing-tokens';

body {
    background-color: $ui-background;
}

// Typography styling
//HEADINGS
#heading-01{
    @include heading-01($font-name);
}

#heading-02{
    @include heading-02($font-name);
}

#heading-03{
    @include heading-03($font-name);
}

#heading-04{
    @include heading-04($font-name);
}
 
#heading-05{  
    @include heading-05($font-name);
}

#heading-06{
    @include heading-06($font-name);
}

//SUBTITLES
#subtitle-01 {
    @include subtitle-01($font-name);
}

#subtitle-02 {
    @include subtitle-02($font-name);
}

//BODY
#body-01 {
    @include body-01($font-name);
}

#body-02 {
    @include body-02($font-name);
}

//SUPPORTIVE
#button {
    @include button($font-name);
}

#caption {
    @include caption($font-name);
}

#overline {
    @include overline($font-name);
}
//typography styling end

//BUTTON STYLING

.button {
    width: 6.5rem;
    height: 2.5rem;
    display: flex;
    color: $white;
    cursor: pointer;
}

.button_icon {
    justify-content: center;
    width: 8.25rem;
    height: 2.563rem;
    display: flex;
    align-items: center;
    color: $white;
    cursor: pointer;
    position: relative;
}

.left_icon {
    position: absolute;
    left: $spacing-05;
    margin: auto;
    padding: 0;
}

.right_icon {
    margin: auto;
    padding: 0;
    position: absolute;
    left: 92px;
}

.button_base_state {
    background-color: $gray-90;
    color: $white;
}


.button_hide_focus{
    border:none;
}

.button_text{
    margin: auto;
    @include button('Rubik');
    font-family: 'Rubik', sans-serif;
}

.button_icon_text{
    position: absolute;
    @include button('Rubik');
    left: 3.5rem;
    font-family: 'Rubik', sans-serif;
}


.button_tertiary_text{
    position: absolute;
    @include button('Rubik');
    left: 3.5rem;
    margin: auto;
    color: $blue-50;
    font-family: 'Rubik', sans-serif;
}

.button_tertiary_text_right{
    position: absolute;
    @include button('Rubik');
    left: 1.75rem;
    margin: auto;
    color: $blue-50;
    font-family: 'Rubik', sans-serif;
}

.interactive_focus{
    width: fit-content;
    padding: $spacing-01;
    border: solid 2px $blue-50;
}

//PRIMARY BUTTON STYLES
.primary_button_active_state {
    background-color: $blue-50;
}

.primary_button_hover_state {
    background-color: $blue-60;
}

.primary_button_clicked_state{
    background-color: $blue-40;
}

.primary_button_disabled_state{
    background-color: $gray-70;
}

//TERTIARY BUTTON STYLES
.tertiary_button_active_state {
    background-color: none;
}

.tertiary_button_hover_state {
    background-color: $gray-80;
}

.tertiary_button_clicked_state{
    background-color: none;
}

.tertiary_button_disabled_state{
    background-color: none;
}

//SECONDARY BUTTON STYLES
.secondary_button_active_state {
    background-color: $gray-20;
}

.secondary_button_hover_state {
    background-color: $gray-30;
}

.secondary_button_clicked_state{
    background-color: $gray-10;
}

.secondary_button_disabled_state{
    background-color: $gray-70;
}


//DANGER BUTTON STYLES
.danger_button_active_state {
    background-color: $red-50;
}

.danger_button_hover_state {
    background-color: $red-70;
}

.danger_button_clicked_state{
    background-color: $red-30;
}

.danger_button_disabled_state{
    background-color: $gray-70;
}

